--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,230 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@import
+url('https://fonts.googleapis.com/css2?family=Montserrat:wght@200;300&display=swap');
+*{
+    font-family: 'Montserrat' , sans-serif;
+    padding: 0;
+    margin: 0;
+    border: 0;
+}
+/* colors and images */
+:root {
+--nav-links-color: #fff;
+--button-hover-color: #878584;
+--backoffice-menu-bg: #343a40;
+--table-head-bg: #e9ecef;
+--nav-link-hover-color: #f79800;
+--footer-color: #e3e3e3;
+--edit-button-color: #ffa207;
+--delete-button-color: #dc3545;
+--header-bg-image: url('oo.jpg');
+--main-bg-color: #343a40
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+
+header{
+
+    background-image: var(--header-bg-image);
+    height: 45vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    background-position: center;
+    background-size: cover;
+    padding: 2% 5%;
+    color: var(--nav-links-color);
+    box-sizing: border-box;
+
+
 }
+
+
+nav {
+    display: flex;
+    column-gap: 2rem;
+}
+
+
+.bot-nav-itens {
+    background-color: #343a40;
+    color: #fff;
+    font-size: 0.7rem;
+    padding: 1rem 5%;
+}
+
+.bot-nav {
+    column-gap: 0;
+}
+
+a {
+    color: var(--nav-links-color);
+    text-decoration: none;
+}
+a:hover{
+    color: aqua;
+}
+
+.edit_button {
+    color: var(--edit-button-color);
+    background-color: var(--main-bg-color);
+    font-weight: bold;
+  }
+  
+  .delete_button {
+    color: var(--delete-button-color);
+    background-color: var(--main-bg-color);
+    font-weight: bold;
+  }
+  
+  .edit_button:hover, .delete_button:hover {
+    color: white;
+    cursor: pointer;
+  }
+
+.right {
+    float: right;
+    display: inline;
+}
+
+#top-div {
+    align-items: center;
+    justify-content: space-between;
+}
+
+footer {
+    background-color: var(--footer-color);
+    min-height: 2rem;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 0 4rem;
+    color: white;
+}
+body {
+    background-color: #0e1013;
+}
+
+table {
+    border-spacing: 0;
+  }
+  
+  thead {
+    background-color: black;
+  }
+  
+  tbody {
+    vertical-align: top;
+  }
+  
+  th, td {
+    text-align: left;
+    width: 20rem;
+    color: white;
+  }
+  
+  th {
+    padding: 1rem;
+  }
+  
+  td {
+    padding: 0.6rem 1rem;
+  }
+
+  main {
+    min-height: 40vh;
+    width: 80%;
+    margin: 1rem auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    border-radius: 6px;
+    background-color: var(--main-bg-color);
+}
+
+.action_buttons {
+    display: flex;
+    justify-content: center;
+    flex-wrap: nowrap;
+    column-gap: 1rem;
+    padding: 0.6rem 0;
+    width: 100%;
+}
+
+button {
+    padding-top: 2px;
+}
+
+
+.pagination {
+    display: flex;
+    margin: 1rem auto;
+    flex-direction: row;
+    margin-top: auto;
+  }
+
+.pagination button.active {
+    background-color: rgb(145, 8, 145);
+    color: white;
+    border: 1px solid rgb(145, 8, 145);
+}
+
+.pagination button {
+    color: white;
+    padding: 0.5rem 1rem;
+    text-decoration: none;
+    border: 1px solid rgb(0, 0, 0);
+    background-color: black;
+}
+.pagination button:hover {
+    cursor: pointer;
+}
+
+.pagination button:last-child {
+    border-top-right-radius: 5px;
+    border-bottom-right-radius: 5px ;
+}
+
+.pagination button:first-child {
+    border-top-left-radius: 5px;
+    border-bottom-left-radius: 5px ;
+}
+
+@media only screen and (max-width : 800px){
+    header{
+        height: 35vh;
+        
+    }
+
+}
+
+
+.bg {
+    display: flex;
+    background-size: 300% 300%;
+    background-image: linear-gradient(-45deg, #2d88ff 0%, #7200f5 25%, #bb50db 51%, #00ddec 100%);
+    -webkit-animation: AnimateBG 20s ease infinite;
+            animation: AnimateBG 20s ease infinite;
+  }
+  
+  @-webkit-keyframes AnimateBG {
+    0% {
+      background-position: 0% 50%;
+    }
+    50% {
+      background-position: 100% 50%;
+    }
+    100% {
+      background-position: 0% 50%;
+    }
+  }
+  
+  @keyframes AnimateBG {
+    0% {
+      background-position: 0% 50%;
+    }
+    50% {
+      background-position: 100% 50%;
+    }
+    100% {
+      background-position: 0% 50%;
+    }
+  }
